# CAMUS

./: .gitignore  README.md  environment.yml  pyproject.toml
camus/config/: experiment.py  library_config.py
camus/demux/: demux_hash_table.py
camus/visualization/: __init__.py  _base.py  comparison.py  heatmaps.py  qc.py  report.py  volcano.py
camus/wrappers/: mageck_wrapper.py
config/: experiment_template.yaml
scripts/: post_analysis_visualization.py  post_analysis_visualization_mle.py  run_mageck_mle_pipeline.py  run_mageck_pipeline.py
sim_experiment/: README.md  analyze_experiment.py  run_demux_all.py  run_experiment.sh  simulate_experiment.py
sim_experiment/data/: celltype_barcodes.csv  combined_library.txt  ground_truth.csv  sgrna_id_map.tsv
sim_experiment/main_run/: config.yaml
tests/: conftest.py  test_config.py  test_demux.py  test_wrapper.py
